--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 <body>
 
     <h1>DEV</h1>
+
+    <div id="div-1">
+
+
+    </div>
+
     
 
 <!--<script src="a2/valor-referencia.js"></script>-->
-<script src="a2/if-else.js"></script>
+<script src="scripts/operador-ternario.js"></script>
 
 </body>
 </html>
